aggiunta pagina per articoli stampa

--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">Chi siamo</a></li>
+                    <li><a href="press.html">Parlano di noi</a></li>
                 </ul>
             </nav>
         </div>
@@ -24,7 +25,7 @@
             <div class="about-us__content">
                 <h2>Chi siamo</h2>
                 <p>
-                    Siamo gli studenti della classe 4C Info degli anni 2021-2022, 2022-2023,
+                    Siamo gli studenti della sezione C Info degli anni 2021-2022, 2022-2023, e 2023-2024
                     Durante il nostro triennio all'Avo abbiamo intrapreso numerosi progetti, alcuni dei quali hanno anche vinto
                     premi regionali.
                     Questo sito é nato con l'idea di tenere traccia di tutti i nostri progetti, ma sopratutto per far vedere ai futuri
