--- a/avomappers.html
+++ b/avomappers.html
@@ -14,6 +14,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">Chi siamo</a></li>
+                    <li><a href="press.html">Parlano di noi</a></li>
                 </ul>
             </nav>
         </div>
